// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disabllow selectors that are not used in a HTML file 1`] = `
Object {
  "deprecations": Array [],
  "errored": true,
  "invalidOptionWarnings": Array [],
  "parseErrors": Array [],
  "warnings": Array [
    Object {
      "column": 1,
      "line": 27,
      "rule": "plugin/no-unused-selectors",
      "severity": "error",
      "text": ".not-found is defined but doesn't match any elements in test.html. (plugin/no-unused-selectors)",
    },
    Object {
      "column": 1,
      "line": 32,
      "rule": "plugin/no-unused-selectors",
      "severity": "error",
      "text": ".list-item:last-child + li is defined but doesn't match any elements in test.html. (plugin/no-unused-selectors)",
    },
  ],
}
`;

exports[`Disabllow selectors that are not used in a JSX file 1`] = `
Object {
  "deprecations": Array [],
  "errored": true,
  "invalidOptionWarnings": Array [],
  "parseErrors": Array [],
  "warnings": Array [
    Object {
      "column": 1,
      "line": 19,
      "rule": "plugin/no-unused-selectors",
      "severity": "error",
      "text": ".not-found is defined but doesn't match any elements in test.jsx. (plugin/no-unused-selectors)",
    },
  ],
}
`;

exports[`Disabllow selectors that are not used in a JSX file using CSS Modules 1`] = `
Object {
  "deprecations": Array [],
  "errored": true,
  "invalidOptionWarnings": Array [],
  "parseErrors": Array [],
  "warnings": Array [
    Object {
      "column": 1,
      "line": 23,
      "rule": "plugin/no-unused-selectors",
      "severity": "error",
      "text": ".not-found is defined but doesn't match any elements in test.jsx. (plugin/no-unused-selectors)",
    },
  ],
}
`;

exports[`Disabllow selectors that are not used in a TSX file 1`] = `
Object {
  "deprecations": Array [],
  "errored": true,
  "invalidOptionWarnings": Array [],
  "parseErrors": Array [],
  "warnings": Array [
    Object {
      "column": 1,
      "line": 13,
      "rule": "plugin/no-unused-selectors",
      "severity": "error",
      "text": ".not-found is defined but doesn't match any elements in test.tsx. (plugin/no-unused-selectors)",
    },
  ],
}
`;

exports[`Disabllow selectors that are not used in a TSX file using CSS Modules 1`] = `
Object {
  "deprecations": Array [],
  "errored": true,
  "invalidOptionWarnings": Array [],
  "parseErrors": Array [],
  "warnings": Array [
    Object {
      "column": 1,
      "line": 23,
      "rule": "plugin/no-unused-selectors",
      "severity": "error",
      "text": ".not-found is defined but doesn't match any elements in test.tsx. (plugin/no-unused-selectors)",
    },
  ],
}
`;

exports[`Disabllow selectors that are not used in a flow-typed JSX file 1`] = `
Object {
  "deprecations": Array [],
  "errored": true,
  "invalidOptionWarnings": Array [],
  "parseErrors": Array [],
  "warnings": Array [
    Object {
      "column": 1,
      "line": 13,
      "rule": "plugin/no-unused-selectors",
      "severity": "error",
      "text": ".not-found is defined but doesn't match any elements in test.jsx. (plugin/no-unused-selectors)",
    },
  ],
}
`;
